# touchstone-verify

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/touchstone_verify/: __init__.py  __main__.py  _ed25519.py  verify.py
tests/: test_conformance.py
tests/fixtures/: manifest.json  plain_valid.json  sd_valid.json
